plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
}

apply plugin: 'io.spring.dependency-management'

java {
    sourceCompatibility = '17'
}

group = 'com.kernel360_seminar'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.projectlombok:lombok:1.18.28'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'org.springframework.boot:spring-boot-starter-web'
    testCompileOnly('org.springframework.boot:spring-boot-starter-test')
}

test {
    useJUnitPlatform()
}